aws_eks/ingress-public-aws.yaml
#apiVersion: networking.k8s.io/v1beta1
# created this so webbapp UI will not need a pw
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-routing
spec:
  rules:
    - host: koingress.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-webapp
              servicePort: 80
